# david

./: .gitignore  .gitmodules  README  huaban.sh  huaban_user.sh
algo/: Makefile  binary-search-tree.md  heap-fibonacci.md  heap.md  lcs.cpp  tree-avl.md  tree-b.md  tree-rb.md
asio/: Makefile  client.cpp
bash/: ziptest.sh
boost/: Makefile  bind.cpp
bootstrap/: dashboard.html  data.tsv  data1.tsv  data3.tsv  hostinfo.html
chatservice/: app.js  config.js  logger.js  mysql.js  readme.txt  redis.js  run.sh
chatservice/public/client/: chat.html
chatservice/public/client/js/: chat.js
chatservice/routes/: friendship.js
clion/: .gitignore  CMakeLists.txt  catch.cpp  main.cpp  tinytest.h  variadic.cpp
clion/cpp/: CMakeLists.txt  ReadMe.md  construct.cpp  func-functor.cpp  func-lambda.cpp  life-lrvalue.cpp  life-move.cpp  loop.cpp  reflection-preq.cpp  reflection.cpp  reflection.h  rtti.cpp
clion/cpp/share/: C++ Reflection.xmind
clion/curl/: CMakeLists.txt  InfluxDB.cpp  InfluxDB.h  ReadMe.md  example_influxdb.cpp  http.cpp  node.md  timeusage.cpp
clion/db/: CMakeLists.txt  soci.cpp
clion/ev/: CMakeLists.txt  ev_1.cpp  ev_my.cpp  eventloop.cpp  eventloop.h
clion/fsm/: CMakeLists.txt  fsm.h  main.cpp
clion/learn-cpp/: CMakeLists.txt  func-pointer.cpp  func.cpp  life-forward.cpp  life.cpp
clion/lua/: mylua.cpp
clion/mop/: g++env.sh  readme.txt
clion/mop/MemPtrNew/: MemPtrNew.dsp  MemPtrNew.dsw  MemPtrNew.h  main.cpp  makefile
clion/mop/catmop/: Book.h  Cd.h  Product.h  catmop.dsp  catmop.dsw  main.cpp  makefile  testcomp.cpp  testfunc.cpp  testfunc.h
clion/mop/mop/: Attribute.h  Class.cpp  Class.h  CppObject.h  DynaObject.cpp  DynaObject.h  FuncValue.h  MemPtr.h  Object.cpp  Object.h  RealValue.h  SimpleObject.cpp  SimpleObject.h  Type.cpp  Type.h  Value.cpp  Value.h  makefile
clion/mop/xmlmop/: MTag.h  MapObject.cpp  MapObject.h  MapValue.cpp  MapValue.h  XmlHelper.h  address.cpp  address.h  main.cpp  makefile  testfunc.cpp  testfunc.h  xmlmop.dsp  xmlmop.dsw
clion/patchupdate/: CMakeLists.txt  crc.cpp  crcpipe.cpp  ddsreader.cpp  ddsreader.hpp  des.h  des_enc.c  des_locl.h  pack.cpp  spr.h  zpipe.cpp  zt.cpp  zt.h  ztcrc.cpp
clion/pattern/: CMakeLists.txt  ReadMe.md  adapter.cpp  factory-method.cpp  factory-method2.cpp
clion/protobuf/: CMakeLists.txt  ReadMe.md  archive.pb.cc  archive.pb.h  archive.proto  archiver.h  concept.h  player.pb.cc  player.pb.h  player.proto  reflect.cpp  reflection.h  self-describering.proto  self.cpp  serialize-dyn.cpp  serialize-dyn.h  serialize-mapping.h  serialize.cpp  serialize.h  simple.cpp
clion/snippet/: CMakeLists.txt  multi-index.cpp  reflection.cpp  reflection.h
clion/thread/: CMakeLists.txt  event_handling.cpp  event_handling2.cpp  thread.cpp
clion/tinyhttp/: CMakeLists.txt  connection.cc  connection.h  example00.cpp  helpers.cc  helpers.h  restclient.cc  restclient.h  tinyhttp.cpp  tinyhttp.h  version.h
clion/zmq/: CMakeLists.txt  main.cpp  proxy.cpp  zhelper.h
cmake/p1/app-math/: CMakeLists.txt  main.cpp
curl/: .tags  .tags_sorted_by_file  HttpClient.cpp  HttpClient.h  Makefile  asio  asio.cpp  client  client.cpp  debug  debug.c  multi  multi.cpp  simple  simple.c
go/: ReadMe.md
guile/: Makefile  libguile-math.c  loaded.scm  sicp-2.3-sign.scm  sicp-procedure.scm  simple-guile.c
ip/: Makefile  app.js  config.js  demo.sql  ip-test.txt  ip138.cpp  ip138.h  mysql.js  package.json  push.js  push_xg.js
java/: MyFirstApp.java
ld/main-a/: a.h  simple.sh
ld/main-aa/: a1.c  a2.c  simple.sh
ld/main-ab/: a.c  b.c  main.c  simple.sh
ld/main-ab2/: a.c  main.c  simple.sh
ld/main-ab3/: a.c  a2.c  b.c  simple.sh
log4cxx/: Makefile  simple.cpp
lua/: complex.lua  data-file.lua  data-structure.lua  data.lua  data2.lua  environment.lua  example-module.lua  function.lua  meta-table.lua  module.lua  oo.lua  variable-type.lua  variable.lua
lua-cpp/: Makefile  mylua.cpp
lua/base/: print.lua
octave/: A.csv  A.mat  b.py  b1-tmp.txt  b1.csv  b2.txt  data.txt  file.m  myfile.mat  rectsin.m  sim.m  sind.m
push/: config.js  demo.sql  demo_push.sh  demo_push_gb2312.sh  logger.js  push.js  push_huawei.js  push_xg.js  push_xiaomi.js  test_huawei.js  test_xiaomi.js
push-go/: demo_push.bat  push.go  push_xiaomi.go  test_xiaomi.go  xiaomi.go
python/: ali.py  interactive.py  learn-string.py  names.py  player.py  pzt2.py  workload.py  workload_except.txt  zt2.py
queueservice/: LoginQueue.cpp  LoginQueue.h  Makefile  MsgStatistics.cpp  MsgStatistics.h  Redis.cpp  Redis.h  a.html  anet.c  b4http.cpp  b4http.sh  b4redis.cpp  redisclient.h  test.cpp  test.h
queueservice/QueueApp/: .app.pid  app.js  config.js  package.json  run.sh
racket/: app.rkt  blog.1  blog.rkt  cps.rkt  db.rkt  hostinfo.html  log.txt  model.rkt  scribble-included.rkt  scribble-text-2.rkt  scribble-text.rkt  stream.1  stream.rkt  view.rkt
sharing/road-of-cpp/: C++ HowTo.xmind  C++.xmind
sjtu/: Makefile  master.tex  master.toc  v1.tex
slideshow/: codify.rkt  run.bat  temp.rkt  test.rkt  zoc-class.rkt  zoc-comment.rkt  zoc-function.rkt  zoc-index.rkt  zoc-intro.rkt  zoc-last.rkt  zoc-layout.rkt  zoc-naming.rkt  zoc-object.and.data.rkt
unity/Bobblehead Wars/: .gitignore  README
unity/Bobblehead Wars/Assets/Animations/: AlienBody.controller  AlienHead.controller  ArenaIdle.anim  HeadBob.anim  (+5 more)
unity/Bobblehead Wars/ProjectSettings/: DynamicsManager.asset  NavMeshAreas.asset  ProjectSettings.asset  TagManager.asset
vim/: .vimrc  a.cpp  a.py  a.vim
windows/: windows.sln
windows/crash/: CrashHandler.cpp  ReadMe.txt  crash.cpp  crash.vcxproj  crash.vcxproj.filters  crashdump.dmp  stdafx.cpp  stdafx.h
windows/ps/: main.cpp  ps.vcxproj
windows/stack_backtrace/: ReadMe.txt  StackWalker.cpp  stack_backtrace.cpp  stack_backtrace.vcxproj  stack_backtrace.vcxproj.filters  stdafx.cpp
windows/win32/: ReadMe.txt  Resource.h  stdafx.cpp  stdafx.h  win32.cpp  win32.rc  win32.vcxproj  win32.vcxproj.filters
zookeeper/: Makefile  test.cpp  zklock.cpp  zoo_lock.c  zoo_lock.h
zookeeper/cluster-test/: test.sh  zoo.cfg.test
(+100 files in other folders)
